<package format="2">
  <name>my_robot_serial_driver</name>
  <version>0.0.1</version>
  <description>Serial driver to send cmd_vel to Arduino</description>
   <maintainer email="xiesy53@gmail.com">zhugeliang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
